test/vm/fails/invalid_greater_equal.js

const res = (11 >= "111");
